objects/enxootr__Test_Run__c.object
<CustomObject>
    <fields>
        <fullName>enxootr__Classes_Total_Archive__c</fullName>
        <label>Classes Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>enxootr__Classes_Total__c</fullName>
        <label>Classes Total Rollup</label>
        <summaryForeignKey>enxootr__Class_Coverage__c.enxootr__Test_Run__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>enxootr__Coverage_Calculated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when we finish to calculate the coverage based on &quot;Is Latest&quot; check boxes on Class Coverage. Those check boxes are checked asynchronously.</description>
        <inlineHelpText>Checked when we finish to calculate the coverage based on &quot;Is Latest&quot; check boxes on Class Coverage. Those check boxes are checked asynchronously.</inlineHelpText>
        <label>Coverage Calculated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>enxootr__Coverage__c</fullName>
        <formula>IF(enxootr__Lines_Total__c != 0, enxootr__Lines_Covered_Archive__c / enxootr__Lines_Total__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Coverage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>enxootr__Error_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Error Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>enxootr__Is_Latest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Latest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>enxootr__Last_Checked__c</fullName>
        <label>Last Checked</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>enxootr__Lines_Covered_Archive__c</fullName>
        <label>Lines Covered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>enxootr__Lines_Covered__c</fullName>
        <label>Lines Covered Rollup</label>
        <summarizedField>enxootr__Class_Coverage__c.enxootr__Lines_Covered__c</summarizedField>
        <summaryForeignKey>enxootr__Class_Coverage__c.enxootr__Test_Run__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>enxootr__Lines_Total__c</fullName>
        <formula>enxootr__Lines_Covered_Archive__c + enxootr__Lines_Uncovered_Archive__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lines Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>enxootr__Lines_Uncovered_Archive__c</fullName>
        <description>Store the number of uncovered lines copied from roll-up field, used for storing the data even if child objects get removed</description>
        <inlineHelpText>Store the number of uncovered lines copied from roll-up field, used for storing the data even if child objects get removed</inlineHelpText>
        <label>Lines Uncovered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>enxootr__Lines_Uncovered__c</fullName>
        <label>Lines Uncovered Rollup</label>
        <summarizedField>enxootr__Class_Coverage__c.enxootr__Lines_uncovered__c</summarizedField>
        <summaryForeignKey>enxootr__Class_Coverage__c.enxootr__Test_Run__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>enxootr__Organization__c</fullName>
        <label>Organization</label>
        <referenceTo>enxootr__Organization__c</referenceTo>
        <relationshipLabel>Test Runs</relationshipLabel>
        <relationshipName>Test_Runs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>enxootr__Partial_Test_Technical_Info__c</fullName>
        <label>Partial Test Technical Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>enxootr__Previous_Run__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Run</label>
        <referenceTo>enxootr__Test_Run__c</referenceTo>
        <relationshipLabel>Next Run</relationshipLabel>
        <relationshipName>Next_Run</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>enxootr__Retrieve_Job_Id__c</fullName>
        <label>Retrieve Job Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>enxootr__Run_Duration__c</fullName>
        <formula>(enxootr__Run_Finished__c - enxootr__Run_Started__c)*1440</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Run Duration [mins]</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>enxootr__Run_Error_Message__c</fullName>
        <description>Contains error message from test run if there is any</description>
        <inlineHelpText>Contains error message from test run if there is any</inlineHelpText>
        <label>Run Error Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>enxootr__Run_Finished__c</fullName>
        <label>Run Finished</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>enxootr__Run_Id__c</fullName>
        <externalId>true</externalId>
        <label>Run Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>enxootr__Run_Started__c</fullName>
        <label>Run Started</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>enxootr__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Finished</fullName>
                </value>
                <value>
                    <fullName>Aborted</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>In Progress - Detailed Coverage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>enxootr__Tests_Failed_Archive__c</fullName>
        <description>Store the number of failed tests copied from roll-up field, used for storing the data even if child objects get removed</description>
        <inlineHelpText>Store the number of failed tests copied from roll-up field, used for storing the data even if child objects get removed</inlineHelpText>
        <label>Tests Failed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>enxootr__Tests_Failed__c</fullName>
        <label>Tests Failed Rollup</label>
        <summaryFilterItems>
            <field>enxootr__Test_Result__c.enxootr__Outcome__c</field>
            <operation>notEqual</operation>
            <value>Pass</value>
        </summaryFilterItems>
        <summaryForeignKey>enxootr__Test_Result__c.enxootr__Test_Run__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>enxootr__Tests_Left__c</fullName>
        <label>Tests Left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>enxootr__Tests_Succeded_Archive__c</fullName>
        <description>Store the number of tests succeeded copied from roll-up field, used for storing the data even if child objects get removed</description>
        <inlineHelpText>Store the number of tests succeeded copied from roll-up field, used for storing the data even if child objects get removed</inlineHelpText>
        <label>Tests Succeded</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>enxootr__Tests_Succeded__c</fullName>
        <label>Tests Succeded Rollup</label>
        <summaryFilterItems>
            <field>enxootr__Test_Result__c.enxootr__Outcome__c</field>
            <operation>equals</operation>
            <value>Pass</value>
        </summaryFilterItems>
        <summaryForeignKey>enxootr__Test_Result__c.enxootr__Test_Run__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>enxootr__Total_Tests_Run__c</fullName>
        <label>OLD_Total Tests Run</label>
        <summaryForeignKey>enxootr__Test_Result__c.enxootr__Test_Run__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>enxootr__Total_tests_run_formula__c</fullName>
        <formula>enxootr__Tests_Failed_Archive__c +  enxootr__Tests_Succeded_Archive__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Tests Run</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Test Run</label>
    <listViews>
        <fullName>enxootr__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TR-{00000}</displayFormat>
        <label>Test Run Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Runs</pluralLabel>
    <recordTypes>
        <fullName>enxootr__Full_Run</fullName>
        <active>true</active>
        <description>Running all test classes on organization</description>
        <label>Full Run</label>
    </recordTypes>
    <recordTypes>
        <fullName>enxootr__Partial_Run</fullName>
        <active>true</active>
        <description>Running only specified tests on organization</description>
        <label>Partial Run</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>enxootr__TR_VR01_PartialTestsNeed</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
				NOT(enxootr__Organization__r.enxootr__Store_Detailed_Line_Coverage__c),
				 RecordType.DeveloperName == &apos;Partial_Run&apos;
)</errorConditionFormula>
        <errorMessage>Partial runs cannot be run on Organizations which do not store detailed line coverage. Please select the checkbox and run full Test Run before executing Partial Run. [TR_VR01]</errorMessage>
    </validationRules>
</CustomObject>